# womens-wc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
data/: city-to-country.json  teams_list.json
data/processed/: base_dataset.parquet  features_dataset.parquet
notebooks/: 01_features.ipynb
src/womenswc/: __init__.py  build_base_dataset.py  features.py  match_data_util.py  weights_util.py
